what I sent to pavel

--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -225,7 +225,7 @@ A lexically stored tree matches a syntactic node iff the lexically stored tree c
 \label{ex:superset-principle}
 
 Let me illustrate this with the Dutch second person plural pronoun from Table \ref{tbl:syncretisms-derive}. This pronoun is syncretic between between the nominative, accusative and dative.
-The lexicon only contains a single lexical entry, namely \ref{ex:dutch-jullie-lexicon}. The lexical tree consists of the complex lexical tree that corresponds to the second person plural pronoun (the 2\ac{pl}P), and \ac{f}1, \ac{f}2 and \ac{f}3 making it a \ac{dat}P. The phonological representation that is linked to the lexical tree is \tit{jullie}.
+The lexicon only contains a single lexical entry, namely \ref{ex:dutch-jullie-lexicon}. The lexical tree consists of the complex lexical tree that corresponds to the second person plural pronoun (the \ac{2}\ac{pl}P), and \ac{f}1, \ac{f}2 and \ac{f}3 making it a \ac{dat}P. The phonological representation that is linked to the lexical tree is \tit{jullie}.
 The nominative, the accusative and the dative can all be spelled out with this single lexical entry using the Superset Principle in \ref{ex:superset-principle}.
 
 \ex.
@@ -604,7 +604,7 @@ The second one is given in \ref{ex:icelandic-okkur-lexicon}. It contains in addi
           [\ac{f}2]
           [\ac{nom}P
               [\ac{f}1]
-              [1\ac{pl}P
+              [\ac{1}\ac{pl}P
                   [\phantom{xxx}, roof]
               ]
           ]
@@ -748,7 +748,7 @@ The second one is given in \ref{ex:german-ihr-lexicon}. It contains in addition 
       [\ac{f}2]
       [\ac{nom}P
           [\ac{f}1]
-          [3\ac{sg}.\ac{f}P
+          [\ac{3}\ac{sg}.\ac{f}P
               [\phantom{xxx}, roof]
           ]
       ]
