--- a/committee-intro.tex
+++ b/committee-intro.tex
@@ -44,11 +44,9 @@ In this chapter I show how the typology can be derived from the morphology of th
 This chapter is structured as follows.
 
 
-\section{The basic idea}\label{sec:basic-idea}
-
 This section gives the basic idea behind my proposal. Throughout the rest of the chapter I motivate the proposal, and I illustrate it with examples.
 
-\subsection{Underlying assumptions}
+\section{Underlying assumptions}
 
 I start with my assumption that headless relatives are derived from light-headed relatives.\footnote{
 The same is argued for headless relatives with \tsc{d}-pronouns in Modern German by \citealt{fuss2014,hanink2018} and for Polish by \citealt{citko2004}.
@@ -227,7 +225,7 @@ With the set of assumptions I introduced in this section, I can account for the 
 However, not all languages are of the internal-only type. I argue that the other two attested languages differ from the internal-only type in how light heads and relative pronouns are spelled out. Before I come back to how the different spellout leads to different language types, I show how the internal-only type fares with differing internal and external cases.
 
 
-\subsection{The internal-only type}
+\section{The internal-only type}
 
 I start with the example in Figure \ref{fig:rel-acc-lh-nom-structure}, in which the relative pronoun bears a more complex case than the light head.
 
@@ -377,7 +375,7 @@ The feature content of the unrestricted languages differs slightly from that of 
 }
 Instead, the differences come from how the light heads and relative pronouns are spelled out.
 
-\subsection{The matching type}
+\section{The matching type}
 
 In matching languages like Polish, the light head cannot delete the relative pronoun and the relative pronoun cannot delete the light head. The intuition for this type of language is that they package their features together differently from internal-only languages like Modern German. The packaging happens in such a way that the constituents of the relative pronoun do not contain the constituents of the light head. As a result, the relative pronoun cannot delete the light head anymore. This account crucially relies on constituent containment being the containment requirement that needs to be fulfilled. Feature containment is too weak of a requirement.
 
@@ -569,7 +567,7 @@ The adjective \tit{leel} `white' does not forms a constituent with \tit{kaarii} 
 To sum up, the comparison between light heads requires constituent containment. Feature containment is not enough.
 
 
-\subsection{The unrestricted type}
+\section{The unrestricted type}
 
 In unrestricted languages like Old High German, the light head can delete the relative pronoun and the relative pronoun can delete the light head. The property of unrestricted languages that I connect to this behavior is that their light heads and relative pronoun are syncretic. I suggest that if there is no constituent containment, but the two forms are spelled out by the same morpheme, one element can still delete the other.
 Consider Figure \ref{fig:rel-lh-syncretism1}, in which the relative pronoun deletes the light head.
@@ -734,7 +732,7 @@ I continue with the left-most constituent of the relative pronoun: the \tsc{rel}
 
 To sum up, each constituent of the relative pronoun is either also a constituent within the light head or it is syncretic with a constituent within the light head. Therefore, the relative pronoun can be absent. The fact that syncretism licenses deletion is not specific to the portion of the structure that corresponds to ϕ and \tsc{rel}. Syncretic cases can have the same effect, the inanimate nominative and inanimate accusative singular in Modern German being an instance of it. I give examples of this in Section \ref{sec:deriving-nonmatching}.
 
-\subsection{Everything is constituent containment}
+\section{Everything is constituent containment}
 
 In summing up this section, I return to the metaphor with the committee that I introduced in Chapter \ref{ch:typology}. I wrote that first case competition takes place, in which a more complex case wins over a less complex case. This case competition can now be reformulated into a more general mechanism, namely constituent comparison. A more complex case corresponds to a constituent that contains the constituent of a less complex case.
 
