--- a/committee-ohg.tex
+++ b/committee-ohg.tex
@@ -1,7 +1,7 @@
 % !TEX root = thesis.tex
 
 
-\section{Deriving the unrestricted type}\label{sec:deriving-nonmatching}
+\chapter{Deriving the unrestricted type}\label{sec:deriving-nonmatching}
 
 Unrestricted languages can be summarizes as in Table \ref{tbl:overview-rel-light-ohg}.
 
@@ -32,7 +32,7 @@ Finally, I show that the effect of syncretism is not limited to Old High German 
 
 
 
-\subsection{The relative pronoun}
+\section{The relative pronoun}
 
 What is different here, is that the relative pronoun is a \tsc{d}-pronoun instead of a \tsc{wh}.
 
@@ -226,7 +226,7 @@ So, the two relative pronouns look like this.\footnote{A question that arises he
 
 
 
-\subsection{The light head}
+\section{The light head}
 
 Headless relatives in which the relative pronoun starts with a \tit{d}, such as in Old High German, seem to be linked to individuating or definite readings and not to generalizing or indefinite readings \citep[cf.][]{fuss2017}. I illustrate this with the two examples I repeat from Chapter  \ref{ch:typology}.
 
@@ -369,7 +369,7 @@ not: `and he replied to whoever spoke to him'
 
 
 
-\subsection{Comparing constituents}\label{sec:comparing-ohg}
+\section{Comparing constituents}\label{sec:comparing-ohg}
 
 Consider the examples in \ref{ex:ohg-nom-nom-rep}, in which the internal nominative case competes against the external nominative case. The relative clauses are marked in bold, and the light heads and the relative pronouns are underlined. As the light head and the relative pronoun are identical it is impossible to see which of them surfaces.
 The internal case is nominative, as the predicate \tit{senten} `to send' takes nominative subjects. The relative pronoun \tit{dher} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case.
