--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -821,3 +821,14 @@
   year={2019},
   publisher={Wiley Online Library}
 }
+
+@article{franks2004,
+  title={Pronominal clitics in Slavic},
+  author={Franks, Steven and Junghanns, Uwe and Law, Paul},
+  journal={Journal of Slavic linguistics},
+  volume={12},
+  number={1/2},
+  pages={3--36},
+  year={2004},
+  publisher={JSTOR}
+}
