--- a/languages-without-case-competition.tex
+++ b/languages-without-case-competition.tex
@@ -72,7 +72,7 @@ Table \ref{tbl:no-case-competition-ext} shows the pattern of a language in which
 
 Section \ref{sec:always-ext} discusses two languages that let their relative pronouns in headless relatives always surface in the external case: Old English and Modern Greek. In Section \ref{sec:typology} I extend the typology from Section \ref{sec:summary-3-patterns} by adding the languages without case competition. As I briefly mentioned, I do not know of any language, whether extinct or alive, that lets the relative pronoun always surface in the internal case. I do not offer an explanation for why it is not attested, and I include this possibility in my typology.
 
-\subsection{Always external case}\label{sec:always-ext}
+\section{Always external case}\label{sec:always-ext}
 
 In this section I discuss two languages in which the relative pronoun always appears in the external case. I show that these languages do not show any case competition. In other words, these languages are of the type shown in Table \ref{tbl:no-case-competition-ext} and not of the type I discussed in Section \ref{sec:pattern-iii} (or of the one in Section \ref{sec:pattern-i}).
 
@@ -463,7 +463,7 @@ When the relative clause is dislocated, both the internal and the external case 
 
 In sum, Old English and Modern Greek are languages without case competition in their headless relatives. The relative pronoun always appears in the external case.
 
-\subsection{A typology of headless relatives}\label{sec:typology}
+\section{A typology of headless relatives}\label{sec:typology}
 
 This section provides a typological overview of headless relatives. First, I describe the difference between the patterns of languages with and without case competition. Second, I include the parameters of non-case competition languages in the diagram I introduced in Section \ref{sec:summary-3-patterns}. Third, I give an overview of all logically possible patterns, I show how the diagram generates the attested ones, and I discuss the non-attested patterns.
 
