--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -767,15 +767,13 @@ The third person singular and first person plural show the same pattern. The acc
             & \ac{1}\ac{sg}
             & \ac{3}\ac{sg}
             & \ac{1}\ac{pl}                           \\
-            \cmidrule(lr){2-2}
+            \cmidrule(lr){2-2} \cmidrule(lr){3-3} \cmidrule(lr){4-4}
   \ac{nom}  & ma
             & luw
             & muŋ                                     \\
-            \cmidrule(lr){3-3}
   \ac{acc}  & ma:\tbf{-ne:m}
             & luw\tbf{-e:l}
             & muŋ\tbf{-e:w}                           \\
-            \cmidrule(lr){4-4}
   \ac{dat}  & ma:\tbf{-ne:m}\tbf{\tbf{-na}}
             & luw\tbf{-e:l}\tbf{\tbf{-na}}
             & muŋ\tbf{-e:w}\tbf{\tbf{-na}}       \\
