second version to pavel

--- a/committee-intro.tex
+++ b/committee-intro.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{Constituent containment}\label{ch:relativization}
+\chapter{Constituent containment}\label{sec:basic-idea}
 
 In Chapter \ref{ch:typology} I introduced two descriptive parameters that generate the attested languages, as shown in Figure \ref{fig:two-parameters}.
 The first parameter concerns whether the external case is allowed to surface when it wins the case competition (allow \tsc{ext}?). This parameter distinguishes between unrestricted languages (e.g. Old High German) on the one hand and internal-only languages (e.g. Modern German) and matching languages (e.g. Polish) on the other hand.
