--- a/committee-mg.tex
+++ b/committee-mg.tex
@@ -551,7 +551,7 @@ Starting from the bottom, these are pronominal features (\tsc{ref} and Σ), deix
 
 \tsc{ref}, Σ, \tsc{deix}, \tsc{wh/rel}?
 
-Before I derive build the relative pronouns, I explain how the spellout procedure in Nanosyntax works. Features (Fs) are merged one by one according to the functional sequence, starting from the bottom. After each instance of merge, the constructed phrase must be spelled out, as stated in \ref{ex:cyclic-phrasal-spellout}.
+Before I derive construct the relative pronouns, I explain how the spellout procedure in Nanosyntax works. Features (Fs) are merged one by one according to the functional sequence, starting from the bottom. After each instance of merge, the constructed phrase must be spelled out, as stated in \ref{ex:cyclic-phrasal-spellout}.
 
 \ex. \tbf{Cyclic phrasal spellout} \citep{caha2020a}\\
 Spellout must succesfully apply to the output of every Merge F operation. After succesfull spellout, the derivation may terminate, or proceed to another round of Merge F.\label{ex:cyclic-phrasal-spellout}
@@ -573,7 +573,7 @@ In the discussion about Modern German, only the first line leads to succesfull s
 
 If these two movement operations still do not lead to a succesfull spellout, there are two more derivational options possible: Backtracking and Spec Formation. I return to these options later in this section, when they are relevant in the derivation of Modern German relative pronouns.
 
-I start building the nominative relative pronoun. Starting from the bottom of the functional sequence, the first two features that are merged at \tsc{ref} and Σ, creating a ΣP.
+I start constructing the nominative relative pronoun. Starting from the bottom of the functional sequence, the first two features that are merged at \tsc{ref} and Σ, creating a ΣP.
 
 \ex.
 \begin{forest} boom
@@ -1018,7 +1018,7 @@ This syntactic structure namely forms a constituent in the lexical tree in \ref{
   ]
 \end{forest}
 
-The next feature on the functional sequence is \tsc{wh}. The story for \tsc{wh} is similar to the one for \tsc{dx}\scsub{1}.
+The next feature on the functional sequence is \tsc{wh}. The derivation for \tsc{wh} resembles the derivation of \tsc{dx}\scsub{1}.
 The feature is merged with the existing syntactic structure, creating a \tsc{wh}P.
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout. Backtracking also does not lead to a successful spellout.
 Therefore, in a second workspace, the feature \tsc{wh} is merged with the feature \tsc{dx}\scsub{2} (the previous syntactic feature on the functional sequence) into a \tsc{wh}P.
@@ -1090,7 +1090,7 @@ Therefore, the \tsc{wh}P is spelled out as \tit{w}, and \tsc{wh}P is merged back
   ]
 \end{forest}
 
-The next feature on the functional sequence is \tsc{rel}. The story for \tsc{rel} is similar to the one for \tsc{dx}\scsub{2}.
+The next feature on the functional sequence is \tsc{rel}. The derivation for \tsc{rel} resembles the derivation of \tsc{dx}\scsub{2}.
 The feature is merged with the existing syntactic structure, creating a \tsc{rel}P.
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
 Backtracking leads splitting up the \tsc{wh}P from the (higher) \tsc{med}P (which contains the lower \tsc{med}P and the \tsc{ind}P).
@@ -1227,7 +1227,7 @@ The \tsc{nom}P is spelled out as \tit{r}, and all constituents are merged back i
 \end{forest}
 }
 
-For the accusative relative pronoun, one more feature is merged: the \tsc{f}2. The story for \tsc{f}2 is similar to the one for \tsc{f}1. The feature is merged with the existing syntactic structure, creating a \tsc{acc}P.
+For the accusative relative pronoun, one more feature is merged: the \tsc{f}2. The derivation for \tsc{f}2 resembles the derivation of \tsc{f}1. The feature is merged with the existing syntactic structure, creating a \tsc{acc}P.
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
 Backtracking leads splitting up the \tsc{rel}P from the (higher) \tsc{med}P (which contains the lower \tsc{med}P and the \tsc{nom}P).
 The feature \tsc{f}2 is merged in both workspaces, so with the \tsc{wh}P and and with the \tsc{med}P. None of these phrases form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
