--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt,hidelinks]{memoir}
 
-\includeonly{committee-pol}
+% \includeonly{committee-pol}
 
 \usepackage{fenna-files/packages}
 \addbibresource{fenna-files/references.bib}
